# ta_base

./: README.md
swarm2/team-agent/: .coverage  .dockerignore  .env.example  .gitignore  .pylintrc  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DATABRICKS_DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile  FRONTEND_BACKEND_README.md  Makefile  PKI_FEATURE_SUMMARY.md  PREVIEW_GUIDE.md  QUICK_START.md  README.md  SIMPLE_PREVIEW.md  TESTING.md  Untitled Notebook 2025-12-14 14_48_34.ipynb  demo_a2a_protocol.py  demo_capability_registry.py  docker-compose.dev.yml  docker-compose.yml  fastmcp_server.py  logstash.conf  mcp_config.json  pyproject.toml  quickstart.sh  requirements.txt  setup.py  test_modular_pki.py
swarm2/team-agent/ai_workflow_evaluator/: __init__.py
swarm2/team-agent/backend/: .env.example  README.md  alembic.ini  app.py  requirements.txt
swarm2/team-agent/base/: base_agent.py  base_team.py  governance.py
swarm2/team-agent/cards/: aws_specialist.json  azure_specialist.json  gcp_specialist.json  legal_specialist.json  oci_specialist.json  writing_specialist.json
swarm2/team-agent/config/: pki_config.yaml  settings.py
swarm2/team-agent/contracts/: CapabilityMarketplace.sol  WorkflowConductor.sol
swarm2/team-agent/docs/: AGENT_CAPABILITY_MODEL.md  AGENT_CARD_SYSTEM_PHASE1.md  AGENT_MANAGER_ARCHITECTURE.md  ARTIFACT_ENCRYPTION_STORAGE.md  CRYPTO_MANIFEST.md  DECENTRALIZED_MARKETPLACE_VISION.md  DOCUMENTATION_INDEX.md  FRESH_MISSION_ANALYSIS.md  GITHUB_WORKFLOW.md  MISSION_WORKFLOW_FIXES.md  NEXT_TASKS.md  PHASE_0_COMPLETE.md  PKI_ENHANCEMENTS_COMPLETE.md  PKI_ENHANCEMENT_PR.md  PKI_MODULAR_ARCHITECTURE.md  QUICK_START_GITHUB.md  SETUP_COMPLETE.md  SWARM_ARCHITECTURE.md
swarm2/team-agent/examples/: README.md  batch_demo.py  demo_orchestrator_a2a.py  demo_trust_system.py  extract_and_run.py  full_pki_integration_test.py  hello_world_demo.py  hello_world_v2.py  interactive_demo.py  legal_capability_demo.py  mission_demo.py  quick_test.py  run_capability_tests.py  run_original_mission.py  simple_demo.py  test_scenarios.py
swarm2/team-agent/frontend/: .env.development  Dockerfile.dev  README.md  index.html  (+4 more)
(+459 files in other folders)
