[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai_workflow_evaluator"
version = "0.3.1"
description = "Idempotent AI Scrutability Evaluation for Databricks"
readme = "README.md"
authors = [{ name = "Team Agent", email = "team@example.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyspark>=3.0.0",
    "pandas>=1.0.0",
    "mlflow>=2.0.0"
]
python-requires = ">=3.8"

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8"
]